# easy-dwpose

./: README.md  pyproject.toml
easy-dwpose/body_estimation/: __init__.py  detector.py  pose.py  utils.py  wholebody.py
easy-dwpose/draw/: __init__.py  mimic_motion.py  musepose.py  openpose.py
easy_dwpose/: __init__.py  dwpose.py
easy_dwpose/body_estimation/: wholebody.py
easy_dwpose/draw/: mimic_motion.py
scripts/: inference_on_folder.py  inference_on_video.py
src/easy_dwpose/: dwpose.py
src/easy_dwpose/body_estimation/: detector.py  pose.py  utils.py
src/easy_dwpose/draw/: musepose.py  openpose.py
tests/: test_dwpose_class.py
