[project]
name = "easy-dwpose"
version = "1.0.3"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub==1.0.1",
    "imageio==2.37.0",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "onnxruntime==1.23.2",
    "onnxruntime-gpu==1.23.2",
    "opencv-python==4.12.0.88",
    "torch==2.9.0",
    "tqdm==4.67.1",
]
