[project]
name = "easy-dwpose"
version = "1.0.3"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub",
    "imageio",
    "loguru",
    "matplotlib",
    "numpy",
    "onnxruntime",
    "onnxruntime-gpu",
    "opencv-python",
    "torch",
    "tqdm",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["easy_dwpose*"]